--- a/java/ICIDataImporter/pom.xml
+++ b/java/ICIDataImporter/pom.xml
@@ -75,6 +75,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-geojsondatastore</artifactId>
+			<version>24.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.10.0</version>
@@ -101,30 +106,41 @@
 		</dependency>
 		<dependency>
 			<groupId>fr.ign</groupId>
-	<artifactId>mupcity-openMole</artifactId>
-	<version>0.0.3-SNAPSHOT</version>
+			<artifactId>mupcity-openMole</artifactId>
+			<version>0.0.3-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<repositories>
+		<repository>
+			<id>osgeo</id>
+			<name>OSGeo Release Repository</name>
+			<url>https://repo.osgeo.org/repository/release/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
 		<repository>
 			<id>repo.eclipse.org</id>
 			<name>JTS Repository - Snapshots</name>
 			<url>https://repo.eclipse.org/content/repositories/jts-snapshots/</url>
 		</repository>
-<!-- 		<repository> -->
-<!-- 			<id>jitpack.io</id> -->
-<!-- 			<url>https://jitpack.io</url> -->
-<!-- 		</repository> -->
+		<!-- <repository> -->
+		<!-- <id>jitpack.io</id> -->
+		<!-- <url>https://jitpack.io</url> -->
+		<!-- </repository> -->
 		<repository>
 			<id>maven2-repository.dev.java.net</id>
 			<name>Java.net repository</name>
 			<url>http://download.java.net/maven/2</url>
 		</repository>
-<!-- 		<repository> -->
-<!-- 			<id>osgeo</id> -->
-<!-- 			<name>Open Source Geospatial Foundation Repository</name> -->
-<!-- 			<url>https://repo.osgeo.org/repository/release/</url> -->
-<!-- 		</repository> -->
+		<!-- <repository> -->
+		<!-- <id>osgeo</id> -->
+		<!-- <name>Open Source Geospatial Foundation Repository</name> -->
+		<!-- <url>https://repo.osgeo.org/repository/release/</url> -->
+		<!-- </repository> -->
 		<repository>
 			<id>ign-snapshots</id>
 			<name>Cogit Snapshots Repository</name>
