--- a/java/ICIDataImporter/pom.xml
+++ b/java/ICIDataImporter/pom.xml
@@ -77,13 +77,18 @@
 		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-geojsondatastore</artifactId>
-			<version>24.0</version>
+			<version>23.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.10.0</version>
+			<version>2.11.1</version>
 		</dependency>
+<!-- 			<dependency> -->
+<!-- 	    <groupId>com.fasterxml.jackson.dataformat</groupId> -->
+<!-- 	    <artifactId>jackson-dataformat-csv</artifactId> -->
+<!-- 	    <version>2.11.1</version> -->
+<!-- 	</dependency> -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
