--- a/java/ICIDataImporter/pom.xml
+++ b/java/ICIDataImporter/pom.xml
@@ -79,11 +79,17 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.11.1</version>
 		</dependency>
-<!-- 			<dependency> -->
-<!-- 	    <groupId>com.fasterxml.jackson.dataformat</groupId> -->
-<!-- 	    <artifactId>jackson-dataformat-csv</artifactId> -->
-<!-- 	    <version>2.11.1</version> -->
-<!-- 	</dependency> -->
+<!--		<dependency>
+			<groupId>org.geotools.jdbc</groupId>
+			<artifactId>gt-jdbc-postgis</artifactId>
+			<version>23.3</version>
+ 		</dependency>
+               <dependency>
+                      <groupId>de.westnordost</groupId>
+                       <artifactId>osmapi-overpass</artifactId>
+                       <version>1.1</version>
+               </dependency> -->
+
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
@@ -93,11 +99,6 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>fluent-hc</artifactId>
 			<version>4.5.13</version>
-		</dependency>
-		<dependency>
-			<groupId>de.westnordost</groupId>
-			<artifactId>osmapi-overpass</artifactId>
-			<version>1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>de.westnordost</groupId>
