Raster export - correct POI import (not finished yet)

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,8 @@ bin/
 .history
 .classpath
 
+java/ICIDataImporter/node_modules/
+
 java/ICIDataImporter/src/main/resources/APIKeys.json
 
 java/ICIDataImporter/rootFolder
