Change Collec methods to new classes from ArtiScales-tools - add generation of the matching between buildings and addresses with demographic datas and refactor those methods - beginning to write a method to connect to PostGreDB

--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,6 @@ java/ICIDataImporter/node_modules/*
 java/ICIDataImporter/node_modules
 java/ICIDataImporter/src/main/resources/APIKeys.json
 java/ICIDataImporter/src/main/resources/dbinfo.json
+java/ICIDataImporter/.settings/*
 
 java/ICIDataImporter/rootFolder
