--- a/java/ICIDataImporter/pom.xml
+++ b/java/ICIDataImporter/pom.xml
@@ -83,13 +83,17 @@
 			<groupId>org.geotools.jdbc</groupId>
 			<artifactId>gt-jdbc-postgis</artifactId>
 			<version>23.3</version>
- 		</dependency>
-               <dependency>
-                      <groupId>de.westnordost</groupId>
-                       <artifactId>osmapi-overpass</artifactId>
-                       <version>1.1</version>
-               </dependency> -->
-
+ 		</dependency> -->
+	   <dependency>
+		   <groupId>org.jgrapht</groupId>
+		   <artifactId>jgrapht-core</artifactId>
+		   <version>1.5.0</version>
+	   </dependency>
+		<dependency>
+		   <groupId>org.jgrapht</groupId>
+		   <artifactId>jgrapht-io</artifactId>
+		   <version>1.5.0</version>
+	   </dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
